--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
 
 import com.android.build.OutputFile
 
@@ -143,7 +144,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.inspireui.mstorecommerce"
+        applicationId "com.yesmk.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 30
@@ -222,6 +223,8 @@ android {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-analytics'
     implementation ('com.onesignal:OneSignal:3.10.5') {
         exclude group: 'com.google.android.gms'
     }
