--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/database": "^14.9.3",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "6.2.0",
     "@react-navigation/native": "6.0.8",
