--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
         kotlinVersion = '1.5.30'
+        googlePlayServicesAuthVersion = "19.2.0"
     }
     repositories {
         google()
