--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/auth": "^14.5.1",
     "@react-native-firebase/database": "^14.5.1",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "6.2.0",
     "@react-navigation/native": "6.0.8",
