🌈 style(language): 修改首页标签样式

--- a/src/common/AppConfig.json
+++ b/src/common/AppConfig.json
@@ -20,13 +20,13 @@
       "category": 27
     },
     {
-      "name": "RoseCrown",
+      "name": "TShapedPants",
       "image": "",
       "layout": "threeColumn",
       "category": 29
     },
     {
-      "name": "WR",
+      "name": "BoxerShorts",
       "image": "",
       "layout": "twoColumn",
       "category": 20
