🌈 style(Horizon List and Layout ): 修改显示样式

--- a/src/common/AppConfig.json
+++ b/src/common/AppConfig.json
@@ -5,31 +5,32 @@
     },
     {
       "layout": "bannerHigh",
-      "tag": 166
+      "tag": 166,
+      "category": 25
     },
     {
       "imageBanner": "https://mstore.io/wp-content/uploads/2017/11/woman-large.png",
       "layout": "bannerImage",
       "height": 118,
-      "category": 22
+      "category": 25
     },
     {
       "imageBanner": "https://mstore.io/wp-content/uploads/2017/06/man-large.png",
       "layout": "bannerImage",
       "height": 118,
-      "category": 27
+      "category": 25
     },
     {
       "name": "TShapedPants",
       "image": "",
       "layout": "threeColumn",
-      "category": 29
+      "category": 25
     },
     {
       "name": "BoxerShorts",
       "image": "",
       "layout": "twoColumn",
-      "category": 20
+      "category": 25
     }
   ],
   "MainColor": "#000000"
